[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "itables"
authors = [{name = "Marc Wouts", email = "marc.wouts@gmail.com"}]
maintainers = [{name = "Marc Wouts", email = "marc.wouts@gmail.com"}]
description = "Pandas and Polar DataFrames as interactive DataTables"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["Pandas", "Polars", "Interactive", "Javascript", "DataTables"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Framework :: Jupyter",
  "Framework :: Dash",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
requires-python = ">= 3.9"
dependencies = ["IPython", "pandas", "numpy"]
dynamic = ["version"]

[project.optional-dependencies]
polars = ["polars", "pyarrow"]
check_type = ["typeguard>=4.4.1"]
style = ["matplotlib"]
samples = ["pytz", "world_bank_data"]
widget = ["anywidget", "traitlets"]
streamlit = ["streamlit"]
dash = ["dash"]
shiny = ["shiny", "shinywidgets"]
all = ["itables[polars,style,samples,widget,dash,shiny,streamlit,check_type]"]
test = [
  "itables[all]",
  # Pytest
  "pytest",
  "pytest-cov",
  # Test the documentation
  "ipykernel",
  "nbconvert",
  "jupytext",
  # Marimo app
  "marimo",
  # Test urls
  "requests",
]
dev = ["itables[test]", "watchfiles", "jupyterlab"]

# automatically add the dev feature to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.version]
path = "src/itables/version.py"

[project.urls]
Homepage = "https://mwouts.github.io/itables/"
Documentation = "https://mwouts.github.io/itables"
Repository = "https://github.com/mwouts/itables.git"
Issues = "https://github.com/mwouts/itables/issues"
Changelog = "https://github.com/mwouts/itables/blob/main/docs/changelog.md"

[pycodestyle]
max-line-length = 88

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain if tests don't hit defensive assertion code:
    "raise NotImplementedError",
    "except ImportError",
  ]

[tool.hatch.build.hooks.jupyter-builder]
enable-by-default = true
dependencies = ["hatch-jupyter-builder>=0.5.0", "dash", "pyyaml"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "src/itables/html/dt_bundle.js",
    "src/itables/html/dt_bundle.css",
    "src/itables_for_dash/ITable.py",
    "src/itables_for_dash/async-ITable.js",
    "src/itables_for_dash/async-ITable.js.LICENSE.txt",
    "src/itables/itables_for_streamlit/asset-manifest.json",
    "src/itables/widget/static/widget.js",
    ]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "packages"
build_cmd = "build"
npm = ["npm"]

[tool.hatch.build.targets.sdist]
packages = ["src/itables", "src/itables_for_dash"]
artifacts = [
    "src/itables/html/dt_bundle.js",
    "src/itables/html/dt_bundle.css",
    "src/itables_for_dash/*",
    "src/itables/itables_for_streamlit/*",
    "src/itables/widget/static/*",
    "src/itables/py.typed",
    "src/itables_for_dash/py.typed",
    ]

[tool.hatch.build.targets.wheel]
packages = ["src/itables", "src/itables_for_dash"]
artifacts = [
    "src/itables/html/dt_bundle.js",
    "src/itables/html/dt_bundle.css",
    "src/itables_for_dash/*",
    "src/itables/itables_for_streamlit/*",
    "src/itables/widget/static/*",
    "src/itables/py.typed",
    "src/itables_for_dash/py.typed",
    ]

[tool.pyright]
typeCheckingMode = "standard"
ignore = [
    "apps/marimo",
    "src/itables_for_dash/ITable.py",
]
strict = [
    "docs",
    "apps",
    "src/itables_for_dash",
    "src/itables/__init__.py",
    "src/itables/dash.py",
    "src/itables/streamlit.py",
    ]
