[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "itables"
authors = [{name = "Marc Wouts", email = "marc.wouts@gmail.com"}]
maintainers = [{name = "Marc Wouts", email = "marc.wouts@gmail.com"}]
description = "Python DataFrames as interactive DataTables"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["Pandas", "Polars", "Narwhals", "Interactive", "Javascript", "DataTables"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Framework :: Jupyter",
  "Framework :: Dash",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
requires-python = ">= 3.9"
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
pandas = ["pandas"]
polars = ["polars"]
narwhals = ["narwhals"]
style = ["pandas", "matplotlib"]

notebook = ["IPython"]
widget = ["anywidget", "traitlets"]
shiny = ["shiny", "shinywidgets"]
dash = ["dash", "typing-extensions"]
streamlit = ["streamlit"]
marimo = ["marimo"]
other_dataframes = ["narwhals", "pyarrow", "modin[dask]"]

config = ["tomli;python_version<\"3.11\"", "platformdirs"]
check_type = ["typeguard>=4.4.1"]

samples = ["pytz", "world_bank_data"]

all = ["itables[config,pandas,polars,style,narwhals,other_dataframes,samples,notebook,widget,dash,shiny,streamlit,marimo,check_type]"]
test-base = [
  "itables",
  # Pytest
  "pytest",
  "pytest-xdist",
  "pytest-cov",
]
test-notebook = [
   "itables[test-base,widget,notebook]",
  # Test the documentation
  "ipykernel",
  "nbconvert",
  "jupytext",
  # Test urls
  "requests",
  ]
test-dash = ["itables[test-base,dash]"]
test-all = ["itables[all,test-notebook]"]
dev = ["itables[test-all]", "watchfiles", "jupyterlab", "pyright", "pandas-stubs"]

[tool.hatch.version]
path = "src/itables/version.py"

[project.urls]
Homepage = "https://mwouts.github.io/itables/"
Documentation = "https://mwouts.github.io/itables"
Repository = "https://github.com/mwouts/itables.git"
Issues = "https://github.com/mwouts/itables/issues"
Changelog = "https://github.com/mwouts/itables/blob/main/docs/changelog.md"

[pycodestyle]
max-line-length = 88

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain if tests don't hit defensive assertion code:
    "raise NotImplementedError",
    "except ImportError",
  ]

[tool.hatch.build.hooks.jupyter-builder]
enable-by-default = true
dependencies = ["hatch-jupyter-builder>=0.5.0", "dash", "pyyaml"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "src/itables/html/dt_bundle.js",
    "src/itables/html/dt_bundle.css",
    "src/itables_for_dash/ITable.py",
    "src/itables_for_dash/async-ITable.js",
    "src/itables_for_dash/async-ITable.js.LICENSE.txt",
    "src/itables/itables_for_streamlit/asset-manifest.json",
    "src/itables/widget/static/widget.js",
    ]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "packages"
build_cmd = "build"
npm = ["npm"]

[tool.hatch.build.targets.sdist]
packages = ["src/itables", "src/itables_for_dash"]
artifacts = [
    "src/itables/html/dt_bundle.js",
    "src/itables/html/dt_bundle.css",
    "src/itables_for_dash/*",
    "src/itables/itables_for_streamlit/*",
    "src/itables/widget/static/*",
    "src/itables/py.typed",
    "src/itables_for_dash/py.typed",
    ]

[tool.hatch.build.targets.wheel]
packages = ["src/itables", "src/itables_for_dash"]
artifacts = [
    "src/itables/html/dt_bundle.js",
    "src/itables/html/dt_bundle.css",
    "src/itables_for_dash/*",
    "src/itables/itables_for_streamlit/*",
    "src/itables/widget/static/*",
    "src/itables/py.typed",
    "src/itables_for_dash/py.typed",
    ]

[tool.pyright]
typeCheckingMode = "standard"
ignore = [
    "apps/marimo",
    "src/itables_for_dash/ITable.py",
    "research",
]
strict = [
    "docs",
    "apps",
    "src/itables_for_dash",
    "src/itables/__init__.py",
    "src/itables/dash.py",
    "src/itables/streamlit.py",
    ]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
nodejs = ">=20"
pre-commit = "*"

[tool.pixi.pypi-dependencies]
itables = {path = ".", editable = true, extras=["dev"]}

[tool.pixi.feature.docs.dependencies]
jupyter-book = ">=1,<2"

[tool.pixi.feature.docs.pypi-dependencies]
sphinxext-rediraffe = "*"

[tool.pixi.feature.minimal.dependencies]
nodejs = ">=20"
python = ">=3.9"

[tool.pixi.feature.test-pandas-notebook.pypi-dependencies]
itables = {path = ".", editable = true, extras=["pandas", "test-notebook"]}

[tool.pixi.feature.test-polars-notebook.pypi-dependencies]
itables = {path = ".", editable = true, extras=["polars", "test-notebook"]}

[tool.pixi.feature.test-pandas-dash.pypi-dependencies]
itables = {path = ".", editable = true, extras=["pandas", "test-dash"]}

[tool.pixi.feature.test-polars-dash.pypi-dependencies]
itables = {path = ".", editable = true, extras=["polars", "test-dash"]}

[tool.pixi.environments]
default = { solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
test-pandas-notebook = { features = ["minimal", "test-pandas-notebook"], no-default-feature = true}
test-polars-notebook = { features = ["minimal", "test-polars-notebook"], no-default-feature = true}
test-pandas-dash = { features = ["minimal", "test-pandas-dash"], no-default-feature = true}
test-polars-dash = { features = ["minimal", "test-polars-dash"], no-default-feature = true}
