[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "itables"
authors = [{name = "Marc Wouts", email = "marc.wouts@gmail.com"}]
maintainers = [{name = "Marc Wouts", email = "marc.wouts@gmail.com"}]
description = "Python DataFrames as interactive DataTables (backward-compatible wrapper around pydatatables)"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["Pandas", "Polars", "Narwhals", "Interactive", "Javascript", "DataTables"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Framework :: Jupyter",
  "Framework :: Dash",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
requires-python = ">= 3.9"
dependencies = ["pydatatables"]
dynamic = ["version"]

[project.optional-dependencies]
pandas = ["pydatatables[pandas]"]
polars = ["pydatatables[polars]"]
narwhals = ["pydatatables[narwhals]"]
style = ["pydatatables[style]"]

notebook = ["pydatatables[notebook]"]
widget = ["pydatatables[widget]"]
shiny = ["pydatatables[shiny]"]
dash = ["pydatatables[dash]"]
streamlit = ["pydatatables[streamlit]"]
marimo = ["pydatatables[marimo]"]
other_dataframes = ["pydatatables[other_dataframes]"]

config = ["pydatatables[config]"]
typing = ["pydatatables[typing]"]
check_type = ["pydatatables[check_type]"]

samples = ["pydatatables[samples]"]

all = ["pydatatables[all]"]

[tool.hatch.version]
path = "src/itables/version.py"

[project.urls]
Homepage = "https://mwouts.github.io/itables/"
Documentation = "https://mwouts.github.io/itables"
Repository = "https://github.com/mwouts/itables.git"
Issues = "https://github.com/mwouts/itables/issues"
Changelog = "https://github.com/mwouts/itables/blob/main/docs/changelog.md"

[tool.hatch.build.targets.sdist]
packages = ["src/itables"]
artifacts = ["src/itables/py.typed"]

[tool.hatch.build.targets.wheel]
packages = ["src/itables"]
artifacts = ["src/itables/py.typed"]
