[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "itables_core"
authors = [{name = "Marc Wouts", email = "marc.wouts@gmail.com"}]
maintainers = [{name = "Marc Wouts", email = "marc.wouts@gmail.com"}]
description = "The core functions (downsampling, formatting) shared by the ITables packages (pydatatables, pyaggrid)"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["Pandas", "Polars", "Narwhals", "Interactive", "Javascript", "DataTables", "AG Grid"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
requires-python = ">= 3.9"
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
pandas = ["pandas"]
polars = ["polars"]
narwhals = ["narwhals"]
typing = ["typing_extensions;python_version<\"3.11\""]
check_type = ["typeguard>=4.4.1"]
samples = ["pytz", "world_bank_data"]

[tool.hatch.version]
path = "src/itables_core/version.py"

[project.urls]
Homepage = "https://mwouts.github.io/itables/"
Documentation = "https://mwouts.github.io/itables"
Repository = "https://github.com/mwouts/itables.git"
Issues = "https://github.com/mwouts/itables/issues"
Changelog = "https://github.com/mwouts/itables/blob/main/docs/changelog.md"

[tool.hatch.build.targets.sdist]
packages = ["src/itables_core"]
artifacts = [
    "src/itables_core/samples/*",
    "src/itables_core/py.typed",
    ]

[tool.hatch.build.targets.wheel]
packages = ["src/itables_core"]
artifacts = [
    "src/itables_core/samples/*",
    "src/itables_core/py.typed",
    ]
