[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyaggrid"
authors = [{name = "Marc Wouts", email = "marc.wouts@gmail.com"}]
maintainers = [{name = "Marc Wouts", email = "marc.wouts@gmail.com"}]
description = "Python DataFrames as interactive AG Grid tables"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["Pandas", "Polars", "Narwhals", "Interactive", "Javascript", "AG Grid"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Framework :: Jupyter",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
requires-python = ">= 3.9"
dependencies = ["itables_core>=0.1.0"]
dynamic = ["version"]

[project.optional-dependencies]
pandas = ["pandas"]
polars = ["polars"]
narwhals = ["narwhals"]

notebook = ["IPython"]

typing = ["typing_extensions;python_version<\"3.11\""]
check_type = ["typeguard>=4.4.1"]

samples = ["itables_core[samples]"]

all = ["pyaggrid[pandas,polars,narwhals,samples,notebook,typing,check_type]"]
test-base = [
  "pyaggrid",
  # Pytest
  "pytest",
  "pytest-xdist",
  "pytest-cov",
]
test-all = ["pyaggrid[all,test-base]"]

[tool.hatch.version]
path = "src/pyaggrid/version.py"

[project.urls]
Homepage = "https://mwouts.github.io/itables/"
Documentation = "https://mwouts.github.io/itables"
Repository = "https://github.com/mwouts/itables.git"
Issues = "https://github.com/mwouts/itables/issues"
Changelog = "https://github.com/mwouts/itables/blob/main/docs/changelog.md"

[tool.hatch.build.targets.sdist]
packages = ["src/pyaggrid"]
artifacts = [
    "src/pyaggrid/html/*",
    "src/pyaggrid/py.typed",
    ]

[tool.hatch.build.targets.wheel]
packages = ["src/pyaggrid"]
artifacts = [
    "src/pyaggrid/html/*",
    "src/pyaggrid/py.typed",
    ]
