[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyaggrid"
authors = [{name = "Marc Wouts", email = "marc.wouts@gmail.com"}]
maintainers = [{name = "Marc Wouts", email = "marc.wouts@gmail.com"}]
description = "Python DataFrames as interactive AG Grid tables"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["Pandas", "Polars", "Narwhals", "Interactive", "Javascript", "AG Grid"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Framework :: Jupyter",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
requires-python = ">= 3.9"
dependencies = ["itables_core==3.0.0.dev0"]
dynamic = ["version"]

[project.optional-dependencies]
pandas = ["pandas"]
polars = ["polars"]
narwhals = ["narwhals"]

notebook = ["IPython"]
widget = ["anywidget", "traitlets"]
shiny = ["shiny", "shinywidgets"]
dash = ["dash", "typing-extensions"]
streamlit = ["streamlit"]

typing = ["typing_extensions;python_version<\"3.11\""]
check_type = ["typeguard>=4.4.1"]

samples = ["itables_core[samples]"]

all = ["pyaggrid[pandas,polars,narwhals,samples,notebook,widget,dash,shiny,streamlit,typing,check_type]"]
test-base = [
  "pyaggrid",
  # Pytest
  "pytest",
  "pytest-xdist",
  "pytest-cov",
]
test-all = ["pyaggrid[all,test-base]"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/pyaggrid/version.py" }]

[tool.hatch.version]
path = "src/pyaggrid/version.py"

[project.urls]
Homepage = "https://mwouts.github.io/itables/"
Documentation = "https://mwouts.github.io/itables"
Repository = "https://github.com/mwouts/itables.git"
Issues = "https://github.com/mwouts/itables/issues"
Changelog = "https://github.com/mwouts/itables/blob/main/docs/changelog.md"

[tool.hatch.build.hooks.jupyter-builder]
enable-by-default = true
dependencies = ["hatch-jupyter-builder>=0.5.0", "dash", "pyyaml"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "src/pyaggrid/widget/static/widget.js",
    "src/pyaggrid/widget/static/widget.css",
    "src/pyaggrid/pyaggrid_for_streamlit/index.js",
    "src/pyaggrid_for_dash/AgGrid.py",
    "src/pyaggrid_for_dash/async-AgGrid.js",
    ]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "../../packages"
build_cmd = "build-pyaggrid"
npm = ["npm"]

[tool.streamlit.component]
components = [
    {name = "pyaggrid_for_streamlit", asset_dir = "pyaggrid_for_streamlit"},
]

[tool.hatch.build.targets.sdist]
packages = ["src/pyaggrid", "src/pyaggrid_for_dash"]
artifacts = [
    "src/pyaggrid/html/*",
    "src/pyaggrid/widget/static/*",
    "src/pyaggrid/pyaggrid_for_streamlit/*",
    "src/pyaggrid_for_dash/*",
    "src/pyaggrid/py.typed",
    "src/pyaggrid_for_dash/py.typed",
    ]

[tool.hatch.build.targets.wheel]
packages = ["src/pyaggrid", "src/pyaggrid_for_dash"]
artifacts = [
    "src/pyaggrid/html/*",
    "src/pyaggrid/widget/static/*",
    "src/pyaggrid/pyaggrid_for_streamlit/*",
    "src/pyaggrid_for_dash/*",
    "src/pyaggrid/py.typed",
    "src/pyaggrid_for_dash/py.typed",
    ]
